# Module25

HW/task_1/: CMakeLists.txt
HW/task_1/include/: operation.h
HW/task_1/src/: CMakeLists.txt  main.cpp  operation.cpp
HW/task_2/: CMakeLists.txt
HW/task_2/include/: cpu.h  disk.h  kbd.h  ram.h
HW/task_2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
